# DRL-Asset-Trading-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline_experiment.json  initial_experiment.json  single_seed_experiment.json
docs/: ablation_variants.md  reward_engineering.md  running_experiments.md
reports/AAPL/: AAPL_2015-01-01_2024-12-31_comparison_table.csv  AAPL_2015-01-01_2024-12-31_ddqn_seed_metrics.csv  AAPL_2015-01-01_2024-12-31_manifest.json  AAPL_2015-01-01_2024-12-31_test_summary.csv  AAPL_2015-01-01_2026-03-20_comparison_table.csv  AAPL_2015-01-01_2026-03-20_ddqn_seed_metrics.csv  AAPL_2015-01-01_2026-03-20_feature_diagnostics.json  AAPL_2015-01-01_2026-03-20_manifest.json  AAPL_2015-01-01_2026-03-20_test_summary.csv  AAPL_2015-01-01_2026-03-20_test_summary_old.csv
reports/ADBE/: ADBE_2015-01-01_2026-03-20_comparison_table.csv  ADBE_2015-01-01_2026-03-20_ddqn_seed_metrics.csv  ADBE_2015-01-01_2026-03-20_feature_diagnostics.json  ADBE_2015-01-01_2026-03-20_manifest.json  ADBE_2015-01-01_2026-03-20_test_summary.csv
reports/AMZN/: AMZN_2015-01-01_2026-03-20_comparison_table.csv  AMZN_2015-01-01_2026-03-20_ddqn_seed_metrics.csv  AMZN_2015-01-01_2026-03-20_feature_diagnostics.json  AMZN_2015-01-01_2026-03-20_manifest.json  AMZN_2015-01-01_2026-03-20_test_summary.csv  AMZN_2015-01-01_2026-03-20_test_summary_old.csv
reports/AVGO/: AVGO_2015-01-01_2026-03-20_comparison_table.csv  AVGO_2015-01-01_2026-03-20_manifest.json  (+3 more)
tests/: test_comparison_interfaces.py  test_config_and_naming.py  test_validation_and_scaling.py
(+3592 files in other folders)
