[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drl-asset-trading"
version = "0.1.0"
description = "DRL asset trading research codebase."
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.2",
  "yfinance>=0.2.54",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
